# web_ai_halfauto_mcp_tool

./: .auditignore  .env.example  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CHANGELOG.md.tmp  README.md  build.bat  commit.bat  doctor.bat  eslint.config.js  index.html  logs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  route.md  setup.bat  start.bat  task.go  test-results.xml  vite.config.ts  vitest.config.ts
.githooks/: commit-msg  incremental-check.sh  post-commit  pre-commit  pre-push
.github/workflows/: ci.yml  governance.yml  release.yml
docs/: CHANGELOG.md  GUIDE.md  IMAGE_GENERATION.md  QUICKSTART.md  README-SCRIPTS.md  README.md  SECURITY.md  TROUBLESHOOTING.md  architecture_optimization_plan.md  coverage-test-plan.md  route.md
governance/: README.md  maturity-model.json  quality-gates.json  standard-v2.md
governance/checklists/: release-checklist.md  review-checklist.md
governance/examples/: change-record.example.json  quality-gate-result.example.json  release-decision.example.json
governance/templates/: capa-template.md  demand-template.md  design-template.md  incident-template.md  release-template.md  test-template.md
scripts/: bootstrap-environment.ps1  bootstrap.mjs  build-evidence-pack.mjs  build.mjs  build.sh  check-environment.mjs  ci-linux.mjs  ci-local.mjs  clean.mjs  clean.sh  dev.mjs  dev.ps1  dev.sh  doctor.mjs  doctor.ps1  doctor.sh  first-run.mjs  git-commit.ps1  git-workflow.mjs  governance-api-check.mjs  governance-validate.mjs  install-hooks.mjs  install-hooks.ps1  release-preflight.mjs  release-tag.mjs  release.ps1  security-audit.mjs  setup.mjs  setup.ps1  setup.sh  test-governance-api-contract.mjs  validate-governance.mjs
scripts/lib/: automation.mjs
skills/minimax-coding-plan-mcp/: README-CN.md  README.md  README_INTEGRATION.md  mcp_server_config_demo.json  pyproject.toml
skills/minimax-coding-plan-mcp/minimax_mcp/: __main__.py  const.py  server.py  utils.py
skills/minimax-coding-plan-mcp/scripts/: dev.sh
skills/minimax-mcp/: README_INTEGRATION.md
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  error.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: lib.rs
src-tauri/crates/mcp/: Cargo.toml
src-tauri/crates/mcp/src/: lib.rs
src-tauri/crates/os-linux/: Cargo.toml
src-tauri/crates/os-linux/src/: clipboard.rs  error.rs  input.rs  lib.rs  window.rs
src-tauri/crates/os-linux/tests/: os_linux_tests.rs
src-tauri/crates/os-win/: Cargo.toml
src-tauri/crates/os-win/src/: clipboard.rs  error.rs  input.rs  lib.rs  window.rs
src-tauri/crates/os-win/tests/: os_win_tests.rs
src-tauri/crates/scheduler/: Cargo.toml
src-tauri/crates/scheduler/src/: lib.rs
src-tauri/src/: config.rs  context.rs  lib.rs  main.rs  mcp_security_test.rs
src-tauri/tests/: config_tests.rs  os_win_tests.rs
src/__tests__/: api.test.ts  setup.ts
src/__tests__/components/: Layout.test.tsx  RunHistoryList.test.tsx  Toast.test.tsx
src/__tests__/domain/: actions.test.ts  api-retry.test.ts  config-export.test.ts  dictionary.test.ts  feedback-learning.test.ts  health-check.test.ts  injection.test.ts  logging.test.ts  news-report.test.ts  persistence.test.ts  run-statistics.test.ts  schedule-engine.test.ts  schedule-storage.test.ts  self-heal.test.ts  slm.test.ts  workflow-engine.test.ts
src/__tests__/hooks/: useDebounce.test.ts  useEventBus.test.ts  useKeyboardShortcuts.test.ts
src/__tests__/pages/: ConsolePage.test.tsx  ReportsPage.test.tsx  SchedulerPage.test.tsx
src/__tests__/store/: AppStore.test.tsx
src/components/: CommandPalette.tsx  DispatchOptions.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorRecoveryPanel.tsx  FocusRecipeEditor.tsx  Layout.tsx  McpNode.tsx  PerformancePanel.tsx  PropertiesPanel.tsx  RouteDecision.tsx  RunHistoryList.tsx  RunItem.tsx  Skeleton.tsx  SkillSelector.tsx  StepProgress.tsx  TargetNode.tsx  TargetWizard.tsx  Toast.tsx  WorkflowEditor.tsx
src/domain/: actions.ts  api-retry.ts  config-export.ts  dictionary.ts  errors.ts  feedback-learning.ts  health-check.ts  injection.ts  logging.ts  news-report.ts  persistence.ts  run-statistics.ts  schedule-engine.ts  schedule-storage.ts  self-heal.ts  slm.ts  workflow-engine.ts
src/hooks/: useDebounce.ts  useEventBus.ts  useFocusTrap.ts  useKeyboardShortcuts.ts  usePerformanceMonitor.ts  useThrottle.ts  useVirtualScroll.ts
src/mcp/: McpClient.ts  McpClientFactory.ts  config.ts  index.ts  mcpWorker.ts
src/mcp/adapters/: McpAdapter.ts  McpHttpAdapter.ts  McpTauriAdapter.ts
src/pages/: ArchivePage.tsx  ConsolePage.tsx  Dashboard.tsx  ReportsPage.tsx  SchedulerPage.tsx  SettingsPage.tsx  SkillsPage.tsx  TargetsPage.tsx  WorkflowEditorPage.tsx  WorkflowsPage.tsx
src/store/: AppStore.tsx  useBoundStore.ts
src/store/slices/: domainSlice.ts  govSlice.ts  mcpSlice.ts  types.ts  uiSlice.ts
