[package]
name = "ai-workbench"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ai_workbench_lib"
crate-type = ["rlib"]

[workspace]
members = ["crates/os-win", "crates/os-linux", "crates/core"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crate_core = { package = "crate-core", path = "crates/core" }
serde_yaml = "0.9"
regex = "1"
tracing = "0.1"
tauri-plugin-notification = "2.3.3"

[target.'cfg(windows)'.dependencies]
os-win = { path = "crates/os-win" }

[target.'cfg(not(windows))'.dependencies]
os-linux = { path = "crates/os-linux" }

[profile.dev]
incremental = true
opt-level = 0
debug = 1
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
debug = false
incremental = false

[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 4
opt-level = 2
