[package]
name = "os-win"
version = "0.1.0"
edition = "2021"
description = "Windows OS automation for AI Workbench (EnumWindows, Activate, Clipboard, Input)"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
]
